--- a/Blog/Blog MOngo.qmd
+++ b/Blog/Blog MOngo.qmd
@@ -1,12 +1,7 @@
 ---
-title: "Introdução ao MongoDB com Julia"
-<<<<<<< HEAD
-author: "Gabriel Campovilla"
-format: html
-editor: visual
-=======
-description: MongoDB: banco de dados NoSQL flexível, rápido e escalável. Ideal para dados semiestruturados e em evolução. Usa documentos tipo JSON (BSON). Mostra como usar com Julia e quando é a melhor escolha.
-
+title: "Introdução ao MongoDB em Julia"
+description: |
+  O *MongoDB* é um banco de dados *NoSQL* flexível, rápido e escalável, ideal para dados semiestruturados ou em evolução, e pode ser integrado facilmente a projetos em *Julia*. 
 categories:
   -  Análise de dados
   -  Banco de dados
@@ -14,84 +9,100 @@ author:
   - name: Gabriel Campovilla da Silva
     affiliation: "Universidade Estadual de Campinas"
     url: https://github.com/C4mpovill4
-
-  - name: 
-    affiliation: 
-    url: 
-    orcid: 
-
+  - name: Nicole Fredericci
+    affiliation: "Universidade Estadual de Campinas"
+    url: https://github.com/NFredericci
 date: "2025-08-28"
-image: imagens/loops_condic.png
+image: imagens/capa_mongoDB.png
 lang: "pt"
 format:
   html:
     toc: true
     self-contained: false
+engine: knitr
 draft: false
-engine: knitrNet
->>>>>>> efd2e2f4acf274a23e5a60507b7003c3112e4b24
 ---
 
-## Por que MongoDB?
+## O que é o MongoDB?
 
-O MongoDB é um banco de dados NoSQL orientado a documentos que se tornou extremamente popular, especialmente para aplicações modernas que lidam com dados semi-estruturados ou não estruturados. Diferente dos bancos de dados relacionais tradicionais, o MongoDB armazena dados em documentos JSON-like (BSON), oferecendo flexibilidade e escalabilidade.
+:::{justify}
+O *MongoDB* é um banco de dados *NoSQL* orientado a documentos que se tornou extremamente popular, especialmente em aplicações modernas que lidam com dados semiestruturados ou não estruturados. Diferentemente dos bancos de dados relacionais tradicionais, o *MongoDB* armazena as informações em documentos no formato *JSON-like* (*BSON*), oferecendo maior flexibilidade e alta escalabilidade.
+:::
 
 ### Principais características:
 
--   **Código aberto e gratuito**
+:::{justify}
+-   **Código aberto e gratuito** – disponível para uso sem custos, com forte suporte da comunidade.
 
--   **Alta performance** para operações de leitura e escrita
+-   **Alta performance** – otimizado para operações rápidas de leitura e escrita.
 
--   **Orientado a documentos** (armazena dados em formato BSON, similar ao JSON)
+-   **Orientado a documentos** – utiliza o formato *BSON* (similar ao *JSON*) para armazenar dados de forma flexível.
 
--   **Escalonamento horizontal** fácil via sharding
+-   **Escalonamento horizontal** – permite distribuir dados facilmente entre múltiplos servidores por meio de sharding.
 
--   **Sem esquema fixo**, ideal para dados que evoluem rapidamente
+-   **Esquema dinâmico** – dispensa um modelo de dados fixo, sendo ideal para informações que evoluem rapidamente.
+:::
 
 ## MongoDB vs Bancos Relacionais
 
-Enquanto bancos relacionais como MySQL ou PostgreSQL organizam dados em tabelas com esquemas rígidos, o MongoDB usa coleções de documentos flexíveis. Cada documento é autossuficiente, contendo todos os dados necessários para representar uma entidade, minimizando a necessidade de JOINs complexos.
+:::{justify}
+Enquanto bancos relacionais, como *MySQL* ou *PostgreSQL*, organizam os dados em tabelas com esquemas rígidos, o *MongoDB* usa coleções de documentos muito mais flexíveis. Cada documento é autossuficiente, contendo todos os dados necessários para representar uma entidade, o que reduz significativamente a necessidade de JOINs complexos.
+
+Essa abordagem permite que o *MongoDB* seja especialmente vantajoso em cenários onde os dados mudam com frequência, possuem estruturas variadas ou precisam ser escalados rapidamente.
+:::
 
 ## MongoDB em Julia
 
-### Conexão com MongoDB
+:::{justify}
+Em *Julia*, assim como em outras linguagens de programação, é possível interagir com bancos de dados *MongoDB* por meio de pacotes específicos. Dois dos mais utilizados são o [Mongo.jl](https://github.com/ScottPJones/Mongo.jl) e o [Mongoc.jl](https://github.com/JuliaDatabases/Mongoc.jl), que oferecem interfaces para conectar, consultar, inserir e manipular documentos diretamente do código em *Julia*.
 
-Em Julia, como em outras linguagens de programação também podemos usar o pacote para interagir com bancos MongoDB.
+O *MongoDB* oferece poderosas operações de agregação, permitindo processar, transformar e combinar dados de forma eficiente, mesmo em grandes volumes. Mas quando usá-lo em *Julia*?
 
-### Operações de Agregação
+-   **Aplicações web modernas** – quando os requisitos de dados mudam frequentemente.
 
-O MongoDB oferece poderosas operações de agregação. Em Julia:Quando usar MongoDB?
+-   **Sistemas de comércio eletrônico** – para produtos com atributos variáveis.
 
--   **Aplicações web modernas** onde os requisitos de dados mudam frequentemente
+-   **Big Data** e análise de dados semiestruturados – quando há grandes volumes de informação diversa.
 
--   **Sistemas de comércio eletrônico** com produtos com atributos variáveis
+-   **Aplicações em tempo real** – que exigem alta velocidade de escrita e leitura.
 
--   **Big Data** e análise de dados semi-estruturados
+Entretanto, existem situações em que é recomendável **evitar** usar *MongoDB* em *Julia*:
 
--   **Aplicações em tempo real** que exigem alta velocidade de escrita
+-   **Transações complexas** – quando o aplicativo exige múltiplas operações atômicas.
 
-## Quando evitar MongoDB?
+-   **Dados altamente relacionais** – se há muitas junções necessárias entre tabelas ou documentos.
 
--   Quando seu aplicativo requer **transações complexas** com múltiplas operações atômicas
-
--   Se seus dados são **altamente relacionais** com muitas junções necessárias
-
--   Quando você precisa de **integridade referencial** estrita entre entidades
+-   **Integridade referencial estrita** – quando é fundamental manter relacionamentos rigorosos entre entidades.
+:::
 
 ## Configurando um Cluster MongoDB Atlas
 
-1.  Acesse [MongoDB Atlas](https://www.mongodb.com/atlas)
+:::{justify}
+Para começar a trabalhar com *MongoDB* em *Julia*, é necessário ter um banco de dados acessível na nuvem. O *MongoDB Atlas* oferece clusters gratuitos que permitem criar, gerenciar e conectar seu banco de dados de forma simples e segura.
 
-2.  Crie uma conta gratuita
+**Passo a passo:**
 
-3.  Siga o assistente para criar um cluster gratuito
+1.  Acesse [MongoDB Atlas](https://www.mongodb.com/atlas).
 
-4.  Configure a segurança (usuários e IPs permitidos)
+2.  Crie uma conta gratuita.
 
-5.  Obtenha a string de conexão para usar em sua aplicação Julia
+3.  Siga o assistente para criar um cluster gratuito.
+
+4.  Configure as regras de segurança, incluindo usuários e IPs permitidos.
+
+5.  Obtenha a string de conexão para utilizá-la em sua aplicação em *Julia*.
+:::
 
 ## Conclusão
 
-MongoDB oferece uma abordagem flexível e poderosa para armazenamento de dados, especialmente adequada para aplicações modernas que lidam com dados complexos e em evolução. Com Julia e o pacote Mongo.jl, você pode facilmente integrar o MongoDB em seus projetos científicos ou aplicações de produção.
+:::{justify}
+O *MongoDB* oferece uma abordagem flexível e poderosa para armazenamento de informações, sendo especialmente adequado para aplicações modernas que lidam com dados complexos e em constante evolução. Com *Julia* e pacotes como `Mongo.jl` ou `Mongoc.jl`, você pode facilmente integrar o *MongoDB* em seus projetos científicos ou aplicações de produção.
 
-Para mais informações, consulte a [documentação oficial do MongoDB](https://docs.mongodb.com/) e a [documentação do Mongo.jl](https://github.com/JuliaComputing/Mongo.jl).
+Para mais informações, você pode consultar a [documentação oficial](https://docs.mongodb.com/) do *MongoDB* e os repositórios dos pacotes mencionados anteriormente, cujos links já foram apresentados.
+:::
+
+> Caso você enfrente problemas para acessar o link da documentação oficial (como aconteceu com nossa equipe), ela também está disponível no GitHub nas versões [Atlas](https://github.com/MongoDBAtlas) e [Manual](https://github.com/mongodb/docs).
+
+::: callout-note
+Ferramentas de IA foram utilizadas para correção ortográfica e aprimoramento do texto.
+:::
