--- a/Blog/Quando usar.qmd
+++ b/Blog/Quando usar.qmd
@@ -13,7 +13,7 @@ author:
     orcid: 
 
 date: "2025-08-22"
-image: imagens/loops_condic.png
+image: imagens/quando.jpeg
 lang: "pt"
 format:
   html:
